infra/deployments/artifacts/production/jaeger/jaeger/templates/extra-list.yaml
---
# Source: jaeger/templates/extra-list.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: jaeger-otlp-cors@kubernetescrd
  name: jaeger-collector-otlp-http
  namespace: jaeger
spec:
  ingressClassName: traefik
  rules:
  - host: tracing.dansysadm.com
    http:
      paths:
      - backend:
          service:
            name: jaeger-collector
            port:
              number: 4318
        path: /v1/traces
        pathType: Prefix
---
# Source: jaeger/templates/extra-list.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: otlp-cors
  namespace: jaeger
spec:
  headers:
    accessControlAllowHeaders:
    - Content-Type
    - traceparent
    - tracestate
    accessControlAllowMethods:
    - POST
    - OPTIONS
    accessControlAllowOriginList:
    - '*'
    accessControlMaxAge: 86400
---
# Source: jaeger/templates/extra-list.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: query-cors
  namespace: jaeger
spec:
  headers:
    accessControlAllowHeaders:
    - Content-Type
    - traceparent
    - tracestate
    accessControlAllowMethods:
    - GET
    - OPTIONS
    accessControlAllowOriginList:
    - '*'
    accessControlMaxAge: 86400
